<resources>
    <string name="app_name" translatable="false">WanAndroid</string>
    <string name="m_appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLay`out$ScrollingViewBehavior</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="or">or</string>
    <string name="later">later?</string>
    <string name="article_title" translatable="false">Article Title</string>
    <string name="author_name" translatable="false">Author Name</string>
    <string name="article_envelope" translatable="false">Article\'s Envelope</string>
    <string name="holder" translatable="false">HOLDER</string>
    <string name="home">Home</string>
    <string name="hierarchy">Hierarchy</string>
    <string name="project">Project</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="offline">OFFLINE</string>
    <string name="collection_list">Collection List</string>
    <string name="nav_site">Navigation Site</string>
    <string name="switch_mode">Switch Mode</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="sign_status">Sign Status</string>
    <string name="user_name">Name</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="ok">OK</string>
    <string name="name_can_not_blank">User name can not be blank !</string>
    <string name="password_can_not_blank">Password can not be blank !</string>
    <string name="two_password_not_equal">Two passwords are inconsistent !</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="online">ONLINE</string>
    <string name="yes">YES</string>
    <string name="cancel">CANCEL</string>
    <string name="no">NO</string>
</resources>
