<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:orderInCategory="0"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        android:enabled="true"
        android:drawable="@drawable/bottom_nav_selector"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_hierarchy"
        android:orderInCategory="1"
        android:title="@string/hierarchy"
        android:icon="@drawable/ic_hierarchy"
        android:enabled="true"
        android:drawable="@drawable/bottom_nav_selector"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_project"
        android:orderInCategory="2"
        android:title="@string/project"
        android:icon="@drawable/ic_project"
        android:enabled="true"
        android:drawable="@drawable/bottom_nav_selector"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_settings"
        android:orderInCategory="4"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        android:enabled="true"
        android:drawable="@drawable/bottom_nav_selector"
        app:showAsAction="ifRoom"/>
</menu>