<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingEnd="64dp"
    android:paddingStart="64dp"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_in"
            android:textColor="@color/colorTextGray"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/colorTextGray" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_up"
            android:textColor="@color/colorTextGray"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_in"/>

        <EditText
            android:id="@+id/et_re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password"
            android:visibility="gone"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:visibility="gone"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_up"/>

    </LinearLayout>

    <TextView
        android:id="@+id/later"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="8dp"
        android:text="@string/later"
        android:textColor="@color/colorTextGray"
        android:textSize="16sp" />
</LinearLayout>