<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivArticleImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/article_envelope"
                android:scaleType="matrix"
                android:src="@mipmap/img_tmp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:background="@color/colorTextBG"
                    android:text="@string/article_title"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvDesc"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/colorTextBG"
                    android:paddingEnd="0dp"
                    android:paddingStart="8dp"
                    android:text="@string/author_name"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorTextBG"
                    android:paddingEnd="8dp"
                    android:paddingStart="0dp"
                    android:text="@string/author_name"
                    android:textAlignment="viewEnd"
                    android:textColor="@android:color/white"
                    android:textSize="10sp" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>